--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,21 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src"
+    ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib\\jacocoagent.jar",
+        "lib\\jacococli.jar",
+        "lib\\junit-jupiter-api-5.3.2.jar",
+        "lib\\junit-jupiter-engine-5.3.2.jar",
+        "lib\\junit-platform-console-1.3.2.jar",
+        "lib\\junit-platform-console-standalone-1.3.2.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\junit-platform-console-1.3.2.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\jacocoagent.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\junit-jupiter-api-5.3.2.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\junit-platform-console-standalone-1.3.2.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\junit-jupiter-engine-5.3.2.jar",
+        "c:\\Users\\tom26\\OneDrive\\Bureau\\IUT INFO\\0. Semestre n°2\\SAÉ\\SAE 2.01 - Développement d'une petite application - Jeux IUT’Olympiques - Recommencer\\JeuxOlympiques\\lib\\jacococli.jar"
     ],
     "java.dependency.packagePresentation": "hierarchical"
 }
